13-kubernetes-config-01-objects/manifests/prod/endpoint.yml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: frontend
  namespace: prod
subsets: 
  - addresses:
      - ip: 51.250.47.109
    ports:
      - port: 80
        targetPort: 80
        name: web
