13-kubernetes-config-01-objects/manifests/prod/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: prod
  name: frontend
spec:
  rules:
    - host: 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  name: web
